# HuobiGlobal

./: .gitignore  CMakeLists.txt  README.md  app_build  config.h.in  doc_build  doxygen.config  linux_build
benchmarks/: CMakeLists.txt
benchmarks/src/: benchmarks.cpp
src/: CMakeLists.txt  main.cpp  types.h
src/calculator/: calculator.cpp  calculator.h
src/file_handler/: file_handler.cpp  file_handler.h
